update docker image name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   gaustudio:
-    image: gaustudio
+    image: irchslu/gaustudio
     build:
       context: .
       dockerfile: Dockerfile
